# lrt_mpicpf

./: CMakeLists.txt  LICENSE.txt  README.md  gitignore  lrt_mpic_plugin.xml  package.xml
config/: gazebo_pid_gains.yaml  lrt_mpipfc.yaml  real_mpipfc.yaml  sim_mpipfc.yaml
config/Exception/: mp_move_to.yaml  mp_stop.yaml
config/Tasks/example_task/exception/: mp_lissajous.yaml  mp_spiral.yaml
config/Tasks/example_task/task/: task.yaml
config/Tasks/example_task/task/skill_1/: skill_1.yaml
config/Tasks/example_task/task/skill_1/mp/: mp_1.yaml  mp_2.yaml  mp_3.yaml
exp_data/: .gitignore  plot_MPIC_PF.m
include/: grampc_util_cpp.h  gripper.h  horizon_cache.hpp  lock_free_queue.hpp  mp_framework.h  mpic_controller.h  mpic_exception.h  mpic_finflag.h  mpic_problem_description.hpp  mpic_state.h  mpic_statemachine.h  mpic_transition.h  mpic_utils.h  real_mpic_controller.h  sim_mpic_controller.h  skill_framework.h  task_framework.h
include/mp_library/: generic_mpic.hpp  mp_types.h  mtc_mpic.hpp
launch/: real_mpipfc.launch  sim_mpipfc.launch
launch/rviz/: mpipfc_rviz.rviz
src/: grampc_util_cpp.cpp  gripper.cpp  mpic_controller.cpp  mpic_exception.cpp  mpic_finflag.cpp  mpic_problem_description.cpp  mpic_state.cpp  mpic_statemachine.cpp  mpic_utils.cpp  real_mpic_controller.cpp  sim_mpic_controller.cpp  skill_framework.cpp  task_framework.cpp
src/mp_library/: generic_mpic.cpp  mp_types.cpp  mtc_mpic.cpp
urdf/robots/: hand.xacro  panda.transmission.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
urdf/worlds/: panda.world
